# pyicp

./: CMakeCache.txt  CMakeLists.txt  LICENSE  __init__.py  libicp.pc.in  setup.py
api/: icp.h  libicp.h
libicp/: CMakeLists.txt  icp.pc
libicp/api/: icp.h
libicp/include/: icp.h  kdtree.h
libicp/src/: icp.cpp  icpPointToPlane.cpp  icpPointToPoint.cpp  kdtree.cpp
libicp/tests/: pyicp_test.py
python/: CMakeLists.txt  pyicp.cpp  pyicp.cxx  pyicp.h  pyicp.pxd  pyicp.pyx  pyicpp.cpp  pyicpp.h  pylibicp.pyx
test/: demo.cpp  pyicp_test.cpp
